fix gitignore dir

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ node_modules/
 systemjs.config.js
 systemjs.config.extras.js
 npm-debug.log
-./src/app/**/*.js
-./src/app/**/*.map
-./src/app/*.js
-./src/app/*.map
+src/app/*/*.js
+src/app/*/*.map
+src/app/**.js
+src/app/**.map
 tslint.json
