--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "scripts": {
         "build": "tsc -p src/",
         "build:watch": "tsc -p src/ -w",
+        "build:aot": "ngc -p src/tsconfig-aot.json && rollup -c rollup-config.js",
         "build:e2e": "tsc -p e2e/",
         "serve": "lite-server -c=bs-config.json",
         "serve:e2e": "lite-server -c=bs-config.e2e.json",
@@ -41,22 +42,26 @@
         "zone.js": "^0.8.5"
     },
     "devDependencies": {
-        "concurrently": "^3.2.0",
-        "lite-server": "^2.2.2",
-        "typescript": "~2.2.2",
+        "@types/jasmine": "2.5.46",
+        "@types/node": "^7.0.11",
         "canonical-path": "0.0.2",
-        "tslint": "^4.5.1",
-        "lodash": "^4.16.4",
+        "concurrently": "^3.2.0",
         "jasmine-core": "~2.5.2",
         "karma": "^1.3.0",
         "karma-chrome-launcher": "^2.0.0",
         "karma-cli": "^1.0.1",
         "karma-jasmine": "^1.0.2",
         "karma-jasmine-html-reporter": "^0.2.2",
+        "lite-server": "^2.2.2",
+        "lodash": "^4.16.4",
         "protractor": "~5.1.1",
         "rimraf": "^2.5.4",
-        "@types/node": "^7.0.11",
-        "@types/jasmine": "2.5.46"
+        "rollup": "^0.41.6",
+        "rollup-plugin-commonjs": "^8.0.2",
+        "rollup-plugin-node-resolve": "^2.0.0",
+        "rollup-plugin-uglify": "^1.0.1",
+        "tslint": "^4.5.1",
+        "typescript": "~2.2.2"
     },
     "repository": {}
 }
